syntax = "proto3";

message GetFurnitureTypesData {
  
}
